...
                    final isBookmarked = state.maybeWhen(
                      success: (articles, isBookmarked) => isBookmarked ?? false,
                      orElse: () => false,
                    );

                    return GestureDetector(
                      key: const Key('bookmark_detail_button'),
                      onTap: () {
                        if (isBookmarked) {
                          context.read<BookmarkBloc>().add(
                                BookmarkEvent.removeBookmark(article.url ?? ''),
                              );
                        } else {
...
              blurRadius: 10,
              offset: Offset(0, 4),
            ),
          ],
        ),
        child: FloatingActionButton(
          key: const Key('chat_fab'),
          onPressed: () {
            Navigator.push(
              context,
              MaterialPageRoute(
                builder: (context) => BlocProvider(
                  create: (context) => ChatBloc(),
...
