...
                        padding: EdgeInsets.symmetric(
                          horizontal: 16,
                          vertical: 8,
                        ),
                        child: Text(
                          'Continue as guest',
                          key: Key('guest_sign_in_button'),
                          style: TextStyle(
                            fontSize: 15,
                            color: Color(0xFF7B52E0),
                            fontWeight: FontWeight.w500,
                          ),
                        ),
...
